src/test/deca/context/invalid/personalTests/testOverrideType2.deca
class A{
    int a ;
    void m(){
        println("m in A");
    }
}

class B extends A{
    int b;
}

class C extends B{
    int c;
    int m(){
        return c;
    }
}

{
    C c = new C();
}